force-app/main/default/objects/FAQ__kav/FAQ__kav.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay>
        
        <articleTypeTemplates>
            
            <channel>App</channel>
            
            <template>Tab</template>
            
        </articleTypeTemplates>
        
        <articleTypeTemplates>
            
            <channel>Prm</channel>
            
            <template>Tab</template>
            
        </articleTypeTemplates>
        
        <articleTypeTemplates>
            
            <channel>Csp</channel>
            
            <template>Tab</template>
            
        </articleTypeTemplates>
        
        <articleTypeTemplates>
            
            <channel>Pkb</channel>
            
            <template>Toc</template>
            
        </articleTypeTemplates>
        
    </articleTypeChannelDisplay>
    <label>FAQ</label>
    <pluralLabel>Popular Links</pluralLabel>
</CustomObject>