force-app/main/default/objects/FAQ__kav/fields/Content_Folder__c.field-meta.xml
<CustomField>
    <fullName>Content_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Folder</label>
    <referenceTo>ContentFolder</referenceTo>
    <relationshipName>FAQs</relationshipName>
    <type>Lookup</type>
</CustomField>