force-app/main/default/objects/FAQ__kav/fields/Help_Category__c.field-meta.xml
<CustomField>
    <fullName>Help_Category__c</fullName>
    <description>Contains picklist values of categories of SSP Benefind Articles</description>
    <label>Help Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSP_Help_Category_Picklist_values</valueSetName>
    </valueSet>
</CustomField>