force-app/main/default/objects/FAQ__kav/fields/HelpModal__c.field-meta.xml
<CustomField>
    <fullName>HelpModal__c</fullName>
    <description>This field will hold the content to be displayed in modal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Help Modal</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>