force-app/main/default/objects/FAQ__kav/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>This field is used to store order of the help content to be rendered on screen</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>