force-app/main/default/objects/FAQ__kav/fields/Related_File__c.field-meta.xml
<CustomField>
    <fullName>Related_File__c</fullName>
    <label>Related File</label>
    <type>File</type>
</CustomField>