force-app/main/default/objects/FAQ__kav/fields/ScreenName__c.field-meta.xml
<CustomField>
    <fullName>ScreenName__c</fullName>
    <description>This field is used to store the name of the screen where Learn More/ help Content needs to be displayed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Screen Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>