force-app/main/default/objects/FAQ__kav/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Video</label>
    <type>Url</type>
</CustomField>