force-app/main/default/objects/FAQ__kav/recordTypes/BenefindArticles.recordType-meta.xml
<RecordType>
    <fullName>BenefindArticles</fullName>
    <active>true</active>
    <description>Record Type for SSP Help and FAQ&apos;s</description>
    <label>Benefind Articles</label>
</RecordType>