force-app/main/default/objects/FAQ__kav/recordTypes/Helpmore.recordType-meta.xml
<RecordType>
    <fullName>Helpmore</fullName>
    <active>true</active>
    <description>This record type is used to store help more information for SSP</description>
    <label>Helpmore</label>
</RecordType>