force-app/main/default/objects/FAQ__kav/listViews/archived_articles.listView-meta.xml
<ListView>
    <fullName>archived_articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>PUBLISH_STATUS</field>
        
            <operation>equals</operation>
        
            <value>3</value>
        
        </filters>
    <filters>
        
            <field>LANGUAGE</field>
        
            <operation>equals</operation>
        
            <value>en_US</value>
        
        </filters>
    <label>Archived Articles</label>
</ListView>